--- a/índex.html
+++ b/índex.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Loopar Bootcamp</h1>
-    <script src="script.js"></script>
+    <script src="./common-passwords.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
